# camera_blindspot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  index.ts  main.py  manage.py  package.json  pyproject.toml
blindspot/: apps.py  middleware.py  views.py
blindspot/lib/: analysis.py  csv_parser.py  errors.py  geo.py  osm.py  repository.py  validation.py
blindspot/management/commands/: seed.py
blindspot/migrations/: 0001_initial.py
blindspot/static/blindspot/: app.js  styles.css
blindspot/templates/blindspot/: index.html
cam_blindspot/: asgi.py  settings.py  urls.py  wsgi.py
docs/: acmvm-deployment.md
migrations/: 001_init.sql
scripts/: extract-delhi-pbf.sh  fetch-cesium.sh
src/frontend/: App.tsx  mapLayers.test.ts  mapLayers.ts  styles.css
src/server/: analysis.test.ts  analysis.ts  api.ts  db.ts  migrate.ts  osm.test.ts  osm.ts  repository.ts  seed.ts  synthetic-cli.test.ts  synthetic-cli.ts
src/shared/: csv.test.ts  csv.ts  geo.test.ts  geo.ts  types.ts  validation.ts
