[project]
name = "cam-blindspot"
version = "0.1.0"
description = "CCTV coverage and blindspot analysis tool against OpenStreetMap building footprints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "gunicorn>=23.0.0",
]

[project.scripts]
cam-blindsight = "manage:main"
